<resources>
    <string name="facebook_app_id">444461969623252</string>
    <string name="fb_login_protocol_scheme">fb2235055383174798</string>

    <string name="app_name">Milage Da Manha</string>
    <string name="navigation_drawer_open">Abra a gaveta de navegação</string>
    <string name="navigation_drawer_close">Fechar gaveta de navegação</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Cabeçalho de navegação</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha </string>
    <string name="prompt_confpassword">Confirme a Senha </string>
    <string name="action_sign_in">Entrar </string>
    <string name="action_cadasto">Cadastar </string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Esse email e invalido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Permissões de contatos são necessárias para fornecer conclusões de email."
    </string>
</resources>
